work/.tmux.conf: Adding stauts bar+ Plugins + custom shortcuts

--- a/work/.tmux.conf
+++ b/work/.tmux.conf
@@ -1,11 +1,32 @@
+# GENERAL
+# set scrollback history to 10000 (10k)
+set -g history-limit 10000
+
+# To enable automatic start to tmux with systemd
+set -g @continuum-boot 'on'
+
+# To restore the tmux sessions after restart
+set -g @continuum-restore 'on'
+
+# tmux open Search engine
+set -g @open-S 'https://www.google.com/search?q='
+
+# Keep window name Static
+set-option -g allow-rename off
+
 # helps in faster key repetition - shorten comm
 set -sg escape-time 0
-
 
 # PANES & WINDOWS
 # Start window $ panes numbering at 1
 set -g base-index 1
 set -g pane-base-index 1
+
+# Horizontal and vertical splits
+unbind |
+bind | split-window -h
+unbind -
+bind - split-window
 
 # Move between panes
 unbind h
@@ -23,7 +44,51 @@ bind-key K resize-pane -U
 bind-key H resize-pane -L
 bind-key L resize-pane -R
 
+# Move between windows
+bind-key -n C-h prev
+bind-key -n C-l next
+
+
 # KEYBOARD SHORTCUTS
 # Config and reload the TMUX config file
 unbind r
 bind-key r source-file ~/.tmux.conf \; display "~/.tmux.conf Reloaded!"
+
+
+# STATUS BAR
+set -g status 'on'
+set -g status-position bottom
+set -g status-justify 'left'
+set -g status-bg 'colour235'
+set -g status-left-length '100'
+set -g status-right-length '100'
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour154,bg=colour238,bold] #(echo User: )#(whoami) #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]       #[fg=yellow,bold]#(echo Sessions: )'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics] #[fg=colour154,bg=colour235] %r | %a %d/%m/%y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour154,bg=colour238,bold] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #{network_bandwidth}'
+
+set -g message-style fg='colour222',bg='colour238'
+set -g message-command-style fg='colour222',bg='colour238'
+
+set -g pane-border-style fg='colour238'
+set -g pane-active-border-style fg='colour154'
+
+setw -g window-status-activity-style fg='colour154',bg='colour235',none
+setw -g window-status-separator ''
+setw -g window-status-style fg='colour121',bg='colour235',none
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour228,bg=colour235] (#I) #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=yellow,bg=colour235,bold] (#I) #W #F #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+
+
+
+
+# PLUGINS
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'xamut/tmux-network-bandwidth'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
