home/tmux.conf: Restructuring the file

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,15 +1,4 @@
-# Start window $ panes numbering at 1
-set -g base-index 1
-set -g pane-base-index 1
-
-# helps in faster key repetition - shorten comm
-set -sg escape-time 0
-
-# Horizontal and vertical splits
-unbind |
-bind | split-window -h
-unbind -
-bind - split-window
+# GENERAL
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
@@ -20,21 +9,26 @@ set -g @continuum-boot 'on'
 # To restore the tmux sessions after restart
 set -g @continuum-restore 'on'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # tmux open Search engine
 set -g @open-S 'https://www.google.com/search?q='
 
 # Keep window name Static
 set-option -g allow-rename off
 
-# VI MODE
-set-window-option -g mode-keys vi
 
-# Move between windows
-bind-key -n C-h prev
-bind-key -n C-l next
+# helps in faster key repetition - shorten comm
+set -sg escape-time 0
+
+# PANES & WINDOWS
+# Start window $ panes numbering at 1
+set -g base-index 1
+set -g pane-base-index 1
+
+# Horizontal and vertical splits
+unbind |
+bind | split-window -h
+unbind -
+bind - split-window
 
 # Move between panes
 unbind h
@@ -45,6 +39,15 @@ unbind k
 bind k select-pane -U
 unbind l
 bind l select-pane -R
+
+
+# Move between windows
+bind-key -n C-h prev
+bind-key -n C-l next
+
+
+# VI MODE
+set-window-option -g mode-keys vi
 
 # Copy-mode vim-like
 bind Escape copy-mode
@@ -97,3 +100,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
