Adding mouse mode to scroll up

--- a/work/.tmux.conf
+++ b/work/.tmux.conf
@@ -48,6 +48,8 @@ bind-key L resize-pane -R
 bind-key -n C-h prev
 bind-key -n C-l next
 
+# MOUSE MODE, enables you to scroll in the tmux history buffer.
+set -g mouse on
 
 # KEYBOARD SHORTCUTS
 # Config and reload the TMUX config file
@@ -83,7 +85,6 @@ setw -g window-status-current-format '#[fg=colour235,bg=colour235,nobold,nounder
 # PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'xamut/tmux-network-bandwidth'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
