--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,13 +32,13 @@ bind - split-window
 
 # Move between panes
 unbind h
-bind h select-pane -L
+bind M-h select-pane -L
 unbind j
-bind j select-pane -D
+bind M-j select-pane -D
 unbind k
-bind k select-pane -U
+bind M-k select-pane -U
 unbind l
-bind l select-pane -R
+bind M-l select-pane -R
 
 
 # Move between windows
