home/tmux.conf Rolling back previous change

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,13 +32,13 @@ bind - split-window
 
 # Move between panes
 unbind h
-bind M-h select-pane -L
+bind h select-pane -L
 unbind j
-bind M-j select-pane -D
+bind j select-pane -D
 unbind k
-bind M-k select-pane -U
+bind k select-pane -U
 unbind l
-bind M-l select-pane -R
+bind l select-pane -R
 
 
 # Move between windows
