work/.tmux.conf - Adding Sync Panes to send command to all panes

--- a/work/.tmux.conf
+++ b/work/.tmux.conf
@@ -48,6 +48,10 @@ bind-key L resize-pane -R
 bind-key -n C-h prev
 bind-key -n C-l next
 
+# Synchronise all panes
+unbind C-S
+bind C-A set-window-option synchronize-panes
+
 # MOUSE MODE, enables you to scroll in the tmux history buffer.
 set -g mouse on
 
